--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<!--Web is not ready lol-->
+  
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Coming soon!</title>
+		<style>
+			body {
+				margin: 0;
+				padding: 0;
+				background-color: #262626;
+			}
+			.firsttext {
+				font-family: Raleway, sans-serif;
+				color: #2fadc4;
+			}
+            .secondtext {
+                font-family: Raleway, sans-serif;
+				color: #c21b1b;
+            }
+		</style>
+	</head>
+	<body>
+		<div align="center">
+            <div class="firsttext">
+                <h2>Hey!, You can Rickroll your friend in this website!</h2>
+                <h4>By: https://scoooolzs.github.io/free/nitro</h4>
+                <h4>Or you can replace the nitro with a random one! Like: https://scoooolzs.github.io/free/money</h4>
+                <h4>Or more!</h4>
+            </div>
+            <div class="secondtext">
+                <h3>Good job Rick Rolling your friend!</h3>
+            </div>
+        </div>
+	</body>
+</html>
