--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-  
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Coming soon!</title>
+		<title>A place that you can rickrolling your friend!</title>
 		<style>
 			body {
 				margin: 0;
